[package]
name = "slack-rust"
version = "0.1.0"
authors = ["Gompei <shoueigonpei6028@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
async-tls = "0.11.0"
async-trait = "0.1.51"
async-tungstenite = "0.16.1"
env_logger = "0.9.0"
futures-util = "0.3.17"
log = "0.4.14"
mockall = "0.11.0"
serde =  { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
surf = "2.3.1"
typetag = "0.1.8"
url = "2.2"
